@@ -2,6 +2,9 @@
 Change log for datafield_template
 ========================================
 
+2024-01-22 (50)
+ - improve fetching of user fields in Moodle >= 3.11
+
 2022-01-04 (49)
  - remove superflous field 'recordcomment', and add 'recordvalue' as an alias for 'recordvalues'
 
